--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # iOS style icons
   cupertino_icons: ^1.0.8
+
+  # Firebase
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
   cloud_firestore: ^6.1.1
+  firebase_messaging: 16.1.0   # Add this for FCM
+
+  # Notifications & vibration
+  flutter_local_notifications: ^19.5.0
+  vibration: ^3.1.5
+
 
 dev_dependencies:
   flutter_test:
