--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^6.1.3
   cloud_firestore: ^6.1.1
   firebase_messaging: 16.1.0   # Add this for FCM
+  http: ^1.1.0
+  flutter_tts: ^4.1.1
 
   # Notifications & vibration
   flutter_local_notifications: ^19.5.0
