--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   # Notifications & vibration
   flutter_local_notifications: ^19.5.0
   vibration: ^3.1.5
-
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
