--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_messaging: 16.1.0   # Add this for FCM
   http: ^1.1.0
   flutter_tts: ^4.1.1
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  url_launcher: ^6.3.1
 
   # Notifications & vibration
   flutter_local_notifications: ^19.5.0
